classDiagram
    class Book {
        +int id
        +string title
        +string author
        +date publicationDate
        +string ISBN
        +string image
        +string description
        +int categoryId
        +int userId
    }

    class Category {
        +int id
        +string name
    }

    class User {
        +int id
        +string username
        +string email
        +string password
    }

    Category "1" -- "0..*" Book : has
    User "1" -- "0..*" Book : creates
